--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,3 +6,9 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+chrono = "0.4.24"
+clap = { version = "4.1.9", features = ["derive"] }
+fern = { version = "0.6.1", features = ["colored"] }
+log = "0.4.17"
+serenity = { version = "0.11.5", default-features = false, features = ["cache", "gateway", "rustls_backend", "http", "builder", "client", "model"] }
+tokio = { version = "1.26.0", features = ["rt-multi-thread", "macros"] }
